--- a/.github/workflows/transpile.yml
+++ b/.github/workflows/transpile.yml
@@ -19,7 +19,7 @@ jobs:
           chmod +x butane
 
       - name: Transpile
-        run: for file in *.bu; do ./butane --strict "{$file}" > "${file%.bu}".ign
+        run: for file in *.bu; do ./butane --strict "{$file}" > "${file%.bu}".ign; done
       
       - name: Create release
         uses: softprops/action-gh-release@v2
