--- a/.github/workflows/transpile.yml
+++ b/.github/workflows/transpile.yml
@@ -27,5 +27,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          tag_name: ${{ github.ref }}
           files: |
             *.ign
