--- a/.github/workflows/transpile.yml
+++ b/.github/workflows/transpile.yml
@@ -26,6 +26,7 @@ jobs:
         id: create_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             *.ign
