--- a/.github/workflows/transpile.yml
+++ b/.github/workflows/transpile.yml
@@ -28,7 +28,7 @@ jobs:
         id: create_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        if: startsWith(github.ref, 'refs/tags/')
         with:
+          tag_name: release
           files: |
             *.ign
